methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:1: error: not found: value dogHouse
dogHouse(){
^MethodsDogHouse:9: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:15: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:25: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:35: error: not found: value dogHouse
		dogHouse();		
                ^